blocks and stuff wow thats crazy

--- a/elara.cabal
+++ b/elara.cabal
@@ -27,6 +27,9 @@ library
   exposed-modules:
       AST.Source
       Lib
+      Parse.Construct
+      Parse.File
+      Parse.Indent
       Parse.Literal
       Parse.Space
   other-modules:
