--- a/elara.cabal
+++ b/elara.cabal
@@ -30,6 +30,7 @@ library
       Parse.Construct
       Parse.File
       Parse.Indent
+      Parse.Language
       Parse.Literal
       Parse.Space
   other-modules:
@@ -39,6 +40,7 @@ library
   build-depends:
       base >=4.7 && <5
     , indents
+    , mtl
     , parsec
     , text
   default-language: Haskell2010
@@ -54,6 +56,7 @@ executable elara-exe
       base >=4.7 && <5
     , elara
     , indents
+    , mtl
     , parsec
     , text
   default-language: Haskell2010
@@ -70,6 +73,7 @@ test-suite elara-test
       base >=4.7 && <5
     , elara
     , indents
+    , mtl
     , parsec
     , text
   default-language: Haskell2010
