--- a/elara.cabal
+++ b/elara.cabal
@@ -25,7 +25,8 @@ source-repository head
 
 library
   exposed-modules:
-      AST.Source
+      Interpreter.State
+      Interpreter.Value
       Lib
       Parse.Lexer
       Parse.Parser
