--- a/elara.cabal
+++ b/elara.cabal
@@ -50,6 +50,7 @@ library
       array
     , base >=4.7 && <5
     , containers
+    , hspec
     , mtl
     , text
     , utf8-string
@@ -70,6 +71,7 @@ executable elara-exe
     , base >=4.7 && <5
     , containers
     , elara
+    , hspec
     , mtl
     , text
     , utf8-string
@@ -79,6 +81,7 @@ test-suite elara-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ParserTest
       Paths_elara
   hs-source-dirs:
       test
@@ -91,6 +94,7 @@ test-suite elara-test
     , base >=4.7 && <5
     , containers
     , elara
+    , hspec
     , mtl
     , text
     , utf8-string
