static bytecode types work now yay

--- a/elara.cabal
+++ b/elara.cabal
@@ -28,6 +28,7 @@ source-repository head
 library
   exposed-modules:
       Compiler.ClassFile
+      Compiler.Instruction
       Interpreter.AST
       Interpreter.Execute
       Lib
