--- a/elara.cabal
+++ b/elara.cabal
@@ -29,6 +29,11 @@ library
   exposed-modules:
       Compiler.ClassFile
       Compiler.Instruction
+      Compiler.Transform.Abstract
+      Compiler.Transform.Environment
+      Compiler.Transform.Expression
+      Compiler.Transform.Transform
+      Compiler.Transform.Types
       Interpreter.AST
       Interpreter.Execute
       Lib
@@ -52,6 +57,7 @@ library
   build-depends:
       array
     , base >=4.7 && <5
+    , bimap
     , binary
     , bytestring
     , containers
@@ -60,6 +66,7 @@ library
     , text
     , time
     , utf8-string
+    , vector
   default-language: Haskell2010
 
 executable elara-exe
@@ -75,6 +82,7 @@ executable elara-exe
   build-depends:
       array
     , base >=4.7 && <5
+    , bimap
     , binary
     , bytestring
     , containers
@@ -84,6 +92,7 @@ executable elara-exe
     , text
     , time
     , utf8-string
+    , vector
   default-language: Haskell2010
 
 test-suite elara-test
@@ -101,6 +110,7 @@ test-suite elara-test
   build-depends:
       array
     , base >=4.7 && <5
+    , bimap
     , binary
     , bytestring
     , containers
@@ -110,4 +120,5 @@ test-suite elara-test
     , text
     , time
     , utf8-string
+    , vector
   default-language: Haskell2010
