desugar let x = y into let x = y in ...

--- a/elara.cabal
+++ b/elara.cabal
@@ -47,6 +47,7 @@ library
       Preprocess.Expression
       Preprocess.Preprocessor
       Preprocess.Type
+      TypeInferrer.Type
   other-modules:
       Paths_elara
   hs-source-dirs:
