--- a/elara.cabal
+++ b/elara.cabal
@@ -66,6 +66,7 @@ library
     , containers
     , hspec
     , mtl
+    , pretty-simple
     , text
     , time
     , utf8-string
@@ -92,6 +93,7 @@ executable elara-exe
     , elara
     , hspec
     , mtl
+    , pretty-simple
     , text
     , time
     , utf8-string
@@ -120,6 +122,7 @@ test-suite elara-test
     , elara
     , hspec
     , mtl
+    , pretty-simple
     , text
     , time
     , utf8-string
