--- a/elara.cabal
+++ b/elara.cabal
@@ -105,6 +105,7 @@ test-suite elara-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      InferTest
       ParserTest
       Paths_elara
   hs-source-dirs:
