--- a/elara.cabal
+++ b/elara.cabal
@@ -18,8 +18,6 @@ build-type:     Simple
 extra-source-files:
     README.md
     ChangeLog.md
-    src/Parse/Lexer.x
-    src/Parse/Parser.y
 
 source-repository head
   type: git
@@ -27,37 +25,20 @@ source-repository head
 
 library
   exposed-modules:
-      Compiler.ClassFile
-      Compiler.Instruction
-      Compiler.Transform.Abstract
-      Compiler.Transform.Environment
-      Compiler.Transform.Expression
-      Compiler.Transform.Transform
-      Compiler.Transform.Types
-      Interpreter.AST
-      Interpreter.Execute
-      Lib
-      Parse.AST
-      Parse.Lexer
-      Parse.Parser
-      Parse.Reader
-      Parse.Token
-      Parse.Utils
-      Preprocess.Constant
-      Preprocess.Expression
-      Preprocess.Preprocessor
-      Preprocess.Type
-      TypeInfer.Env
-      TypeInfer.Expr
-      TypeInfer.Infer
-      TypeInfer.Type
+      AST.Source
+      Elara.Name
+      Elara.String
+      Parse.Declaration
+      Parse.Expression
+      Parse.Pattern
+      Parse.Primitives
+      Parse.Value
   other-modules:
       Paths_elara
   hs-source-dirs:
       src
-  build-tools:
-      alex
-    , happy
+  default-extensions:
+      OverloadedStrings
   build-depends:
       array
     , base >=4.7 && <5
@@ -66,7 +47,9 @@ library
     , bytestring
     , containers
     , hspec
+    , megaparsec
     , mtl
+    , parser-combinators
     , pretty-simple
     , text
     , time
@@ -81,9 +64,6 @@ executable elara-exe
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex
-    , happy
   build-depends:
       array
     , base >=4.7 && <5
@@ -93,7 +73,9 @@ executable elara-exe
     , containers
     , elara
     , hspec
+    , megaparsec
     , mtl
+    , parser-combinators
     , pretty-simple
     , text
     , time
@@ -111,9 +93,6 @@ test-suite elara-test
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
-  build-tools:
-      alex
-    , happy
   build-depends:
       array
     , base >=4.7 && <5
@@ -123,7 +102,9 @@ test-suite elara-test
     , containers
     , elara
     , hspec
+    , megaparsec
     , mtl
+    , parser-combinators
     , pretty-simple
     , text
     , time
