--- a/elara.cabal
+++ b/elara.cabal
@@ -61,6 +61,7 @@ library
       OverloadedStrings
       ImportQualifiedPost
       OverloadedRecordDot
+  ghc-options: -Wall
   build-depends:
       array
     , base >=4.7 && <5
