--- a/elara.cabal
+++ b/elara.cabal
@@ -45,6 +45,7 @@ library
       Parse.Primitives
       Parse.Type
       Parse.Value
+      Pretty
       Print
       TypeInfer.ASTType
       TypeInfer.Env
@@ -75,6 +76,7 @@ library
     , mtl
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , text
     , time
@@ -103,6 +105,7 @@ executable elara-exe
     , mtl
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , text
     , time
@@ -133,6 +136,7 @@ test-suite elara-test
     , mtl
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , text
     , time
