Parse def declarations & more type inference

--- a/elara.cabal
+++ b/elara.cabal
@@ -51,6 +51,7 @@ library
       TypeInfer.Env
       TypeInfer.Expression
       TypeInfer.Infer
+      TypeInfer.Module
       TypeInfer.Pattern
       TypeInfer.Type
       TypeInfer.Value
