--- a/elara.cabal
+++ b/elara.cabal
@@ -63,7 +63,8 @@ library
       LambdaCase
   ghc-options: -Wall
   build-depends:
-      array
+      HUnit
+    , array
     , base >=4.7 && <5
     , bimap
     , binary
@@ -90,7 +91,8 @@ executable elara-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:
-      array
+      HUnit
+    , array
     , base >=4.7 && <5
     , bimap
     , binary
@@ -114,13 +116,19 @@ test-suite elara-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      InferTest
+      ParseTest
       Paths_elara
   hs-source-dirs:
       test
+  default-extensions:
+      ImportQualifiedPost
+      OverloadedStrings
+      OverloadedRecordDot
+      QuasiQuotes
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      array
+      HUnit
+    , array
     , base >=4.7 && <5
     , bimap
     , binary
@@ -128,9 +136,10 @@ test-suite elara-test
     , containers
     , elara
     , generic-data
-    , hspec
+    , hspec ==2.*
     , megaparsec
     , mtl
+    , neat-interpolation
     , parser-combinators
     , parsers
     , pretty-simple
@@ -139,3 +148,4 @@ test-suite elara-test
     , utf8-string
     , vector
   default-language: Haskell2010
+  build-tool-depends: hspec-discover:hspec-discover == 2.*
