--- a/package.yaml
+++ b/package.yaml
@@ -25,8 +25,8 @@ dependencies:
   - monadlist
 
 ghc-options:
-- -fwrite-ide-info
-- -hiedir=.hie
+- -Wall
+- -threaded
 
 default-extensions:
 - OverloadedStrings
@@ -45,8 +45,7 @@ executables:
   elara:
     main: Main.hs
     source-dirs: app
-    ghc-options:
-    - -threaded
+    ghc-options: []
     dependencies:
     - elara
 
@@ -58,10 +57,7 @@ tests:
     source-dirs: test
     default-extensions:
     - QuasiQuotes
-    ghc-options:
-      - -threaded
-      - -rtsopts
-      - -with-rtsopts=-N
+    ghc-options: []
     dependencies:
       - elara
       - neat-interpolation
