Cleanup and fix parsing yay

--- a/.hlint.yaml
+++ b/.hlint.yaml
@@ -17,6 +17,10 @@
 - ignore:
     name: Use Foldable.forM_
 - hint:
+    lhs: "return"
+    rhs: "pure"
+    note: "Use pure instead of return"
+- hint:
     lhs: "pure ()"
     note: "Use 'pass'"
     rhs: pass
