--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,8 @@ dependencies:
 
 ghc-options:
 - -Wall
-- -threaded
+- -Werror=incomplete-patterns
+
 
 default-extensions:
 - OverloadedStrings
@@ -45,7 +46,8 @@ executables:
   elara:
     main: Main.hs
     source-dirs: app
-    ghc-options: []
+    ghc-options:
+    - -threaded
     dependencies:
     - elara
 
@@ -62,3 +64,4 @@ tests:
       - elara
       - neat-interpolation
       - HUnit
+      - hspec-megaparsec
