--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 packages:
   - .
 resolver:
-  compiler: ghc-9.2.2
+  compiler: ghc-9.4.2
 
 extra-deps:
   - relude-1.1.0.0@sha256:fe82b67d4560b9eff8d7dd12c5e1f786b25d52d64f7302ad82a3bbec9a0bd55e,11747
@@ -231,7 +231,7 @@ extra-deps:
   - type-equality-1@sha256:bb3a34a93ad02866763b325e889ea9f5aa31f7428e32dcaa1cf14015bd21b9cb,1597
   - cpphs-1.20.9.1@sha256:0ad26fef4e6be4cb13e1df93aab7bdbe9c3d3bc6c63b84d9e29cc0f691fe12b9,3331
   - deriving-aeson-0.2.8@sha256:65aabe7fe384360bc4d472787423145c05f8e5ede64fac677a375ed82a3d9d5f,1342
-  - ghc-lib-parser-ex-9.2.0.4@sha256:687caca63c6f2e34eccead25c6ad4c1f46b5a1a3e34aa3b652ee1cfbc5d14fd3,3655
+  - ghc-lib-parser-9.2.4.20220729@sha256:02c229a122d698f055615f2794fbcb01ce4241aaf16ee990068189193c61e228,12741
   - hscolour-1.24.4@sha256:3a329fa0ea9138f651088f1fa25522aabeab0eb591932d3fd56c66736bbe78be,1682
   - refact-0.3.0.2@sha256:4ea82b93debdc0711e1bc4b5d8989b9e19613f369ff2049da33c5250b8d33bcd,1065
   - uniplate-1.6.13@sha256:c8b715570d0b4baa72512e677552dd3f98372a64bf9de000e779bd4162fd7be7,3320
