--- a/elara.cabal
+++ b/elara.cabal
@@ -78,6 +78,7 @@ library
   build-depends:
       base-noprelude >=4.7 && <5
     , containers
+    , diagnose
     , lens
     , megaparsec
     , monadlist
@@ -108,6 +109,7 @@ executable elara
   build-depends:
       base-noprelude >=4.7 && <5
     , containers
+    , diagnose
     , elara
     , lens
     , megaparsec
@@ -147,6 +149,7 @@ test-suite elara-test
       HUnit
     , base-noprelude >=4.7 && <5
     , containers
+    , diagnose
     , elara
     , hspec ==2.*
     , hspec-megaparsec
