--- a/package.yaml
+++ b/package.yaml
@@ -7,7 +7,7 @@ maintainer: Alexander Wood <alexljwood24@hotmail.co.uk>
 copyright: 2022 Alexander Wood
 license: MIT
 github: ElaraLang/elara
-tested-with: ghc ==9.2.2
+tested-with: ghc ==9.2.5
 
 
 dependencies:
@@ -18,6 +18,7 @@ dependencies:
   - containers
   - more-containers
   - insert-ordered-containers
+  - algebraic-graphs
   - megaparsec
   - parsers
   - parser-combinators
