--- a/elara.cabal
+++ b/elara.cabal
@@ -17,7 +17,7 @@ license:        MIT
 license-file:   LICENSE
 build-type:     Simple
 tested-with:
-    ghc ==9.2.5
+    ghc ==9.4.2
 
 source-repository head
   type: git
@@ -25,22 +25,14 @@ source-repository head
 
 library
   exposed-modules:
-      Elara.AST.Canonical
       Elara.AST.Frontend
-      Elara.AST.Generic
-      Elara.AST.Typed
-      Elara.Data.Located
-      Elara.Data.Module
-      Elara.Data.Module.Inspection
-      Elara.Data.Name
-      Elara.Data.Prelude
-      Elara.Data.Project
-      Elara.Data.Qualifications
+      Elara.AST.Frontend.Pretty.Unlocated
+      Elara.AST.Frontend.Unlocated
+      Elara.AST.Module
+      Elara.AST.Name
+      Elara.AST.Region
+      Elara.AST.Select
       Elara.Data.Type
-      Elara.Data.TypeAnnotation
-      Elara.Data.Uniqueness
-      Elara.Desugar.Desugar
-      Elara.Error
       Elara.Parse
       Elara.Parse.Combinators
       Elara.Parse.Declaration
@@ -48,22 +40,13 @@ library
       Elara.Parse.Indents
       Elara.Parse.Literal
       Elara.Parse.Module
-      Elara.Parse.Name
+      Elara.Parse.Names
       Elara.Parse.Pattern
       Elara.Parse.Primitives
       Elara.Parse.Type
-      Elara.TypeInfer.Common
-      Elara.TypeInfer.Declaration
-      Elara.TypeInfer.Environment
-      Elara.TypeInfer.Error
-      Elara.TypeInfer.Expression
-      Elara.TypeInfer.Graph
-      Elara.TypeInfer.Infer
-      Elara.TypeInfer.Module
-      Elara.TypeInfer.Substitute
       Prelude
       Print
-      Utils
+      TODO
   other-modules:
       Paths_elara
   hs-source-dirs:
@@ -77,6 +60,8 @@ library
       ImportQualifiedPost
       DeriveDataTypeable
       DataKinds
+      DeriveFunctor
+      TypeApplications
   ghc-options: -Wall -Werror=incomplete-patterns
   build-depends:
       algebraic-graphs
@@ -91,6 +76,7 @@ library
     , mtl
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , relude
   default-language: Haskell2010
@@ -110,6 +96,8 @@ executable elara
       ImportQualifiedPost
       DeriveDataTypeable
       DataKinds
+      DeriveFunctor
+      TypeApplications
   ghc-options: -Wall -Werror=incomplete-patterns -threaded
   build-depends:
       algebraic-graphs
@@ -125,6 +113,7 @@ executable elara
     , mtl
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , relude
   default-language: Haskell2010
@@ -138,6 +127,8 @@ test-suite elara-test
       Parse.Expression
       Parse.LetDec
       Parse.Names
+      Parse.Orphans
+      Parse.QuickCheck
       Paths_elara
   hs-source-dirs:
       test
@@ -150,10 +141,13 @@ test-suite elara-test
       ImportQualifiedPost
       DeriveDataTypeable
       DataKinds
+      DeriveFunctor
+      TypeApplications
       QuasiQuotes
   ghc-options: -Wall -Werror=incomplete-patterns
   build-depends:
       HUnit
+    , QuickCheck
     , algebraic-graphs
     , base-noprelude >=4.7 && <5
     , containers
@@ -170,6 +164,7 @@ test-suite elara-test
     , neat-interpolation
     , parser-combinators
     , parsers
+    , pretty
     , pretty-simple
     , relude
   default-language: Haskell2010
